# Practical-Work-CPP30

./: README.md
Task_1/: CMakeLists.txt  main.cpp
Task_2/: CMakeLists.txt  main.cpp
Task_3/: CMakeLists.txt  main.cpp
